Bug 175060 - File tree does not execute file/directory contextual external tools.
Summary: File tree does not execute file/directory contextual external tools.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-13 16:36 UTC by Jordi Blasi
Modified: 2008-11-14 13:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jordi Blasi 2008-11-13 16:36:25 UTC
Version:           3.5.3 (using KDE 3.5.9)
OS:                Linux
Installed from:    Mandriva RPMs


I'm having problems trying to execute configured external tools (file or directory contextual) from "File Tree" window.

When I right click on a file/directory from "File Tree" window and try to execute the configured external tool (configured external tools appear correctly on menu), kdevelop does not execute it without giving any message error (even from console).

That has always been working properly (i.e. 3.5.0). In fact it works from "File Selector" and files tabs but since I have installed a new 3.5.3 kdevelop version it has stopped working.

Am I missing something? What has "File Tree" different from "File Selector"? Any wrong KDE configuration?

This was a very powerful feature that's gone unfortunately. I know I could use "File Selector" but I never use this plugin since does not support subversion integration, file tree view, project files, ...
Comment 1 Andreas Pakulat 2008-11-13 17:53:58 UTC
This works just fine here, the external tools show up under the "Hide Non Project Files" entry right at the top. Using a build from sources here, so this might be a mandriva problem.

And nothing really changed that could influence this in KDevelop3 sources - at least nothing in our svn repository.
Comment 2 Jordi Blasi 2008-11-14 09:06:12 UTC
Yes, the external tools correctly show up under the "Hide Non Project Files" entry right at the top, but when I select one kdevelop does not execute it!

Because that is so annoying I have tried the following:

1.- Build from sources the following tar under Mandriva 2008 (kde 3.5.9)
http://download.kde.org/download.php?url=stable/3.5.10/src/kdevelop-3.5.3.tar.bz2:

-> External tools are not executed!

2.- Tried Kdevelop 3.5.1 (kde 3.5.9) from Mandriva 2008 default installation:

-> External tools are not executed!

3.- Tried Kdevelop 3.5.3 (kde 3.5.9) from Kubuntu 8.04-1 standard installation:

-> External tools are not executed!

4.- Tried Kdevelop 3.5.0 built from source tar from Mandriva 2007:

-> External tools are executed successfully!
Comment 3 Andreas Pakulat 2008-11-14 12:44:44 UTC
SVN commit 884132 by apaku:

Apparently someone thought its cool to have accelerators (Alt+<Letter>) for
context menus, that broke the external tools because they use the menu text to
find the right group in the config file.

This fixes that by storing a mapping between the popup-entry-id and the actual
text of the config group.
BUG:175060


 M  +13 -9     tools_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=884132
Comment 4 Jordi Blasi 2008-11-14 13:17:54 UTC
I have just tried your patch successfully.

Thanks so much.
Keep up that great IDE and team!