Apparently someone thought its cool to have accelerators (Alt+<Letter>) for context menus, that broke the external tools because they use the menu text to find the right group in the config file.

This fixes that by storing a mapping between the popup-entry-id and the actual
text of the config group.
BUG:175060